More on dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global cnt, n, m\n",
+    "    visited[i][j] = True\n",
+    "    print((i, j), end=' ')\n",
+    "    \n",
+    "    for k in range(4):        \n",
+    "        n_i = i + dy[k]\n",
+    "        n_j = j + dx[k]\n",
+    "        \n",
+    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[i][j] and graph[n_i][n_j]:\n",
+    "            dfs(graph, n_i, n_j, visited)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 3) "
+     ]
+    }
+   ],
+   "source": [
+    "dfs(graph, 0, 3, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +212,50 @@
    "source": [
     "for row in visited:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0) \n",
+      "(0, 1) \n",
+      "(0, 2) \n",
+      "(0, 3) \n",
+      "(0, 4) \n",
+      "\n",
+      "(1, 0) \n",
+      "(1, 1) \n",
+      "(1, 2) \n",
+      "(1, 3) \n",
+      "(1, 4) \n",
+      "\n",
+      "(2, 0) \n",
+      "(2, 1) \n",
+      "(2, 2) \n",
+      "(2, 3) \n",
+      "(2, 4) \n",
+      "\n",
+      "(3, 0) \n",
+      "(3, 1) \n",
+      "(3, 2) \n",
+      "(3, 3) \n",
+      "(3, 4) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(graph)):\n",
+    "    for j in range(len(graph[i])):\n",
+    "        dfs(graph, i, j, visited)\n",
+    "        print()\n",
+    "    print()"
    ]
   }
  ],
