More on dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,26 +108,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dfs(graph, i, j, visited):\n",
     "    global cnt, n, m\n",
-    "    visited[i][j] = True\n",
-    "    print((i, j), end=' ')\n",
+    "    if graph[i][j] == 0:\n",
+    "        visited[i][j] = True\n",
+    "        print((i, j), end=' ')\n",
+    "    else:\n",
+    "        print(f\"{(i,j)}칸의 값은 1입니다.\")\n",
     "    \n",
     "    for k in range(4):        \n",
     "        n_i = i + dy[k]\n",
     "        n_j = j + dx[k]\n",
     "        \n",
-    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[i][j] and graph[n_i][n_j]:\n",
+    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
     "            dfs(graph, n_i, n_j, visited)      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global cnt, n, m\n",
+    "    if graph[i][j] == 0:\n",
+    "        visited[i][j] = True\n",
+    "        print((i, j), end=' ')\n",
+    "        for k in range(4):        \n",
+    "            n_i = i + dy[k]\n",
+    "            n_j = j + dx[k]\n",
+    "            \n",
+    "            if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
+    "                dfs(graph, n_i, n_j, visited)\n",
+    "    else:\n",
+    "        print(f\"{(i,j)}칸의 값은 1입니다.\")      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -178,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 3) "
+      "(0, 3)칸의 값은 1입니다.\n"
      ]
     }
    ],
@@ -195,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, False, False, True]\n",
-      "[True, True, True, False, False]\n",
-      "[False, False, False, False, False]\n",
+      "[True, True, False, True, True]\n",
+      "[True, True, True, False, True]\n",
+      "[True, False, False, False, False]\n",
       "[True, True, True, True, True]\n"
      ]
     }
