More on dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "cnt = 0\n",
     "dy = (1, 0, -1,  0)\n",
-    "dx = (0, 1,  0, -1)"
+    "dx = (0, 1,  0, -1)\n",
+    "\n",
+    "ice_cream_dict = {}"
    ]
   },
   {
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,12 +127,13 @@
     "        n_j = j + dx[k]\n",
     "        \n",
     "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
+    "            \n",
     "            dfs(graph, n_i, n_j, visited)      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,37 +141,74 @@
     "    global cnt, n, m\n",
     "    if graph[i][j] == 0:\n",
     "        visited[i][j] = True\n",
-    "        print((i, j), end=' ')\n",
+    "        #print((i, j), end=' ')\n",
+    "        ice_cream_list = []\n",
     "        for k in range(4):        \n",
     "            n_i = i + dy[k]\n",
     "            n_j = j + dx[k]\n",
     "            \n",
     "            if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
+    "                ice_cream_list.append((n_i, n_j))\n",
     "                dfs(graph, n_i, n_j, visited)\n",
+    "        ice_cream_dict[(i, j)] = ice_cream_list            \n",
+    "\n",
     "    else:\n",
     "        print(f\"{(i,j)}칸의 값은 1입니다.\")      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 0) (1, 0) (1, 1) (1, 2) (0, 1) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfs(graph, 0, 0, visited)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2): [],\n",
+       " (0, 1): [],\n",
+       " (1, 1): [(1, 2), (0, 1)],\n",
+       " (1, 0): [(1, 1)],\n",
+       " (0, 0): [(1, 0)]}"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ice_cream_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1) "
+     ]
+    }
+   ],
+   "source": [
+    "dfs(graph, 0, 1, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -219,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, False, True, True]\n",
-      "[True, True, True, False, True]\n",
-      "[True, False, False, False, False]\n",
+      "[True, True, False, False, True]\n",
+      "[True, True, True, False, False]\n",
+      "[False, False, False, False, False]\n",
       "[True, True, True, True, True]\n"
      ]
     }
@@ -240,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -249,21 +289,30 @@
      "text": [
       "(0, 0) \n",
       "(0, 1) \n",
-      "(0, 2) \n",
-      "(0, 3) \n",
+      "(0, 2)칸의 값은 1입니다.\n",
+      "\n",
+      "(0, 3)칸의 값은 1입니다.\n",
+      "\n",
       "(0, 4) \n",
       "\n",
       "(1, 0) \n",
       "(1, 1) \n",
       "(1, 2) \n",
-      "(1, 3) \n",
-      "(1, 4) \n",
+      "(1, 3)칸의 값은 1입니다.\n",
       "\n",
-      "(2, 0) \n",
-      "(2, 1) \n",
-      "(2, 2) \n",
-      "(2, 3) \n",
-      "(2, 4) \n",
+      "(1, 4)칸의 값은 1입니다.\n",
+      "\n",
+      "\n",
+      "(2, 0)칸의 값은 1입니다.\n",
+      "\n",
+      "(2, 1)칸의 값은 1입니다.\n",
+      "\n",
+      "(2, 2)칸의 값은 1입니다.\n",
+      "\n",
+      "(2, 3)칸의 값은 1입니다.\n",
+      "\n",
+      "(2, 4)칸의 값은 1입니다.\n",
+      "\n",
       "\n",
       "(3, 0) \n",
       "(3, 1) \n",
