More on dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,26 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dfs(graph, i, j, visited):\n",
-    "    global cnt, n, m\n",
-    "    visited[i][j] = True\n",
-    "    print((i, j), end=' ')\n",
-    "    \n",
-    "    for k in range(4):        \n",
-    "        n_i = i + dy[k]\n",
-    "        n_j = j + dx[k]\n",
-    "        \n",
-    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
-    "            dfs(graph, n_i, n_j, visited)           "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,34 +91,10 @@
     "        n_i = i + dy[k]\n",
     "        n_j = j + dx[k]\n",
     "        \n",
-    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
-    "            \n",
-    "            dfs(graph, n_i, n_j, visited)      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dfs(graph, i, j, visited):\n",
-    "    global cnt, n, m\n",
-    "    if graph[i][j] == 0:\n",
-    "        visited[i][j] = True\n",
-    "        #print((i, j), end=' ')\n",
-    "        ice_cream_list = []\n",
-    "        for k in range(4):        \n",
-    "            n_i = i + dy[k]\n",
-    "            n_j = j + dx[k]\n",
-    "            \n",
-    "            if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
-    "                ice_cream_list.append((n_i, n_j))\n",
-    "                dfs(graph, n_i, n_j, visited)\n",
-    "        ice_cream_dict[(i, j)] = ice_cream_list            \n",
-    "\n",
-    "    else:\n",
-    "        print(f\"{(i,j)}칸의 값은 1입니다.\")      "
+    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:            \n",
+    "            dfs(graph, n_i, n_j, visited)\n",
+    "        elif is_valid_coord(n_i, n_j, n, m) and visited[n_i][n_j] and not graph[n_i][n_j]: \n",
+    "            print(f\"{(i,j)}칸은 이미 방문처리되었습니다.\")     "
    ]
   },
   {
@@ -248,19 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) \n",
+      "(0, 0) (1, 0) (1, 1) (1, 2) (0, 1) \n",
       "(0, 1) \n",
       "(0, 2)칸의 값은 1입니다.\n",
       "\n",
       "(0, 3)칸의 값은 1입니다.\n",
-      "\n",
+      "(0, 4) \n",
       "(0, 4) \n",
       "\n",
       "(1, 0) \n",
@@ -272,7 +229,7 @@
       "\n",
       "\n",
       "(2, 0)칸의 값은 1입니다.\n",
-      "\n",
+      "(3, 0) (3, 1) (3, 2) (3, 3) (3, 4) \n",
       "(2, 1)칸의 값은 1입니다.\n",
       "\n",
       "(2, 2)칸의 값은 1입니다.\n",
