--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +95,29 @@
     "            dfs(graph, n_i, n_j, visited)\n",
     "        elif is_valid_coord(n_i, n_j, n, m) and visited[n_i][n_j] and not graph[n_i][n_j]: \n",
     "            continue     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global cnt, n, m\n",
+    "    if graph[i][j] == 0:\n",
+    "        visited[i][j] = True\n",
+    "        print((i, j), end=' ')\n",
+    "    else:\n",
+    "        print(f\"{(i,j)}칸의 값은 1입니다.\")\n",
+    "    \n",
+    "    for k in range(4):        \n",
+    "        n_i = i + dy[k]\n",
+    "        n_j = j + dx[k]\n",
+    "        \n",
+    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
+    "            visited[n_i][n_j] = True          \n",
+    "            dfs(graph, n_i, n_j, visited) "
    ]
   },
   {
@@ -205,82 +228,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) (1, 0) (1, 1) (1, 2) (1, 2)칸은 이미 방문처리되었습니다.\n",
-      "(0, 1) (0, 1)칸은 이미 방문처리되었습니다.\n",
-      "(0, 1)칸은 이미 방문처리되었습니다.\n",
-      "(1, 1)칸은 이미 방문처리되었습니다.\n",
-      "(1, 0)칸은 이미 방문처리되었습니다.\n",
-      "(0, 0)칸은 이미 방문처리되었습니다.\n",
-      "\n",
-      "(0, 1) (0, 1)칸은 이미 방문처리되었습니다.\n",
-      "(0, 1)칸은 이미 방문처리되었습니다.\n",
-      "\n",
+      "(0, 0) (1, 0) (1, 1) (1, 2) (0, 1) \n",
+      "(0, 1) \n",
       "(0, 2)칸의 값은 1입니다.\n",
-      "(0, 2)칸은 이미 방문처리되었습니다.\n",
-      "(0, 2)칸은 이미 방문처리되었습니다.\n",
       "\n",
       "(0, 3)칸의 값은 1입니다.\n",
       "(0, 4) \n",
       "(0, 4) \n",
       "\n",
-      "(1, 0) (1, 0)칸은 이미 방문처리되었습니다.\n",
-      "(1, 0)칸은 이미 방문처리되었습니다.\n",
-      "\n",
-      "(1, 1) (1, 1)칸은 이미 방문처리되었습니다.\n",
-      "(1, 1)칸은 이미 방문처리되었습니다.\n",
-      "(1, 1)칸은 이미 방문처리되었습니다.\n",
-      "\n",
-      "(1, 2) (1, 2)칸은 이미 방문처리되었습니다.\n",
-      "\n",
+      "(1, 0) \n",
+      "(1, 1) \n",
+      "(1, 2) \n",
       "(1, 3)칸의 값은 1입니다.\n",
-      "(1, 3)칸은 이미 방문처리되었습니다.\n",
       "\n",
       "(1, 4)칸의 값은 1입니다.\n",
-      "(1, 4)칸은 이미 방문처리되었습니다.\n",
       "\n",
       "\n",
       "(2, 0)칸의 값은 1입니다.\n",
-      "(3, 0) (3, 1) (3, 2) (3, 3) (3, 4) (3, 4)칸은 이미 방문처리되었습니다.\n",
-      "(3, 3)칸은 이미 방문처리되었습니다.\n",
-      "(3, 2)칸은 이미 방문처리되었습니다.\n",
-      "(3, 1)칸은 이미 방문처리되었습니다.\n",
-      "(2, 0)칸은 이미 방문처리되었습니다.\n",
-      "\n",
+      "(3, 0) (3, 1) (3, 2) (3, 3) (3, 4) \n",
       "(2, 1)칸의 값은 1입니다.\n",
-      "(2, 1)칸은 이미 방문처리되었습니다.\n",
-      "(2, 1)칸은 이미 방문처리되었습니다.\n",
       "\n",
       "(2, 2)칸의 값은 1입니다.\n",
-      "(2, 2)칸은 이미 방문처리되었습니다.\n",
-      "(2, 2)칸은 이미 방문처리되었습니다.\n",
       "\n",
       "(2, 3)칸의 값은 1입니다.\n",
-      "(2, 3)칸은 이미 방문처리되었습니다.\n",
       "\n",
       "(2, 4)칸의 값은 1입니다.\n",
-      "(2, 4)칸은 이미 방문처리되었습니다.\n",
       "\n",
       "\n",
-      "(3, 0) (3, 0)칸은 이미 방문처리되었습니다.\n",
-      "\n",
-      "(3, 1) (3, 1)칸은 이미 방문처리되었습니다.\n",
-      "(3, 1)칸은 이미 방문처리되었습니다.\n",
-      "\n",
-      "(3, 2) (3, 2)칸은 이미 방문처리되었습니다.\n",
-      "(3, 2)칸은 이미 방문처리되었습니다.\n",
-      "\n",
-      "(3, 3) (3, 3)칸은 이미 방문처리되었습니다.\n",
-      "(3, 3)칸은 이미 방문처리되었습니다.\n",
-      "\n",
-      "(3, 4) (3, 4)칸은 이미 방문처리되었습니다.\n",
-      "\n",
+      "(3, 0) \n",
+      "(3, 1) \n",
+      "(3, 2) \n",
+      "(3, 3) \n",
+      "(3, 4) \n",
       "\n"
      ]
     }
