More on dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cnt = 0\n",
     "dy = (1, 0, -1,  0)\n",
     "dx = (0, 1,  0, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connected_component = []\n",
+    "ans = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global cnt, n, m\n",
+    "    \n",
+    "    if graph[i][j] == 0:\n",
+    "        visited[i][j] = True\n",
+    "        print((i, j), end=' ')        \n",
+    "        #return (i, j)      \n",
+    "    \n",
+    "    for k in range(4):        \n",
+    "        n_i = i + dy[k]\n",
+    "        n_j = j + dx[k]\n",
+    "        \n",
+    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:           \n",
+    "            dfs(graph, n_i, n_j, visited)            \n",
+    "        else:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global ans, n, m   \n",
+    "    \n",
+    "    if graph[i][j] == 0:\n",
+    "        visited[i][j] = True\n",
+    "        #print((i, j), end=' ')        \n",
+    "        ans += str((i, j))  \n",
+    "  \n",
+    "    for k in range(4):        \n",
+    "        i += dy[k]\n",
+    "        j += dx[k]\n",
+    "        \n",
+    "        if is_valid_coord(i, j, n, m) and not visited[i][j] and not graph[i][j]:                       \n",
+    "            dfs(graph, i, j, visited)            \n",
+    "        else:\n",
+    "           continue\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global connected_component, n, m   \n",
+    "    sub_component = []\n",
+    "    \n",
+    "    if graph[i][j] == 0:\n",
+    "        visited[i][j] = True\n",
+    "        #print((i, j), end=' ')  \n",
+    "    \n",
+    "  \n",
+    "    for k in range(4):        \n",
+    "        i += dy[k]\n",
+    "        j += dx[k]\n",
+    "        \n",
+    "        if is_valid_coord(i, j, n, m) and not visited[i][j] and not graph[i][j]:\n",
+    "            sub_component.append((i, j))                       \n",
+    "            dfs(graph, i, j, visited)            \n",
+    "        else:\n",
+    "           continue\n",
+    "    \n",
+    "    connected_component.append(sub_component)\n",
+    "    return connected_component"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(graph)):\n",
+    "    for j in range(len(graph[i])):        \n",
+    "        if not visited[i][j]:\n",
+    "            dfs(graph, i, j, visited)                                 \n",
+    "        else:\n",
+    "            continue           \n",
+    "        print()    \n",
+    "    print()     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0)(1, 0)(1, 1)(1, 2)(0, 1)(0, 4)(3, 0)(3, 1)(3, 2)(3, 3)(3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[], [(1, 2)], [(1, 1)], [], [(1, 0), (0, 1)], [], [], [(0, 4)], [], [], [], [(3, 4)], [(3, 3)], [(3, 2)], [(3, 1)], [(3, 0)], [], [], [], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(connected_component)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global cnt, n, m\n",
+    "    if graph[i][j] == 0:\n",
+    "        visited[i][j] = True\n",
+    "        print((i, j), end=' ')\n",
+    "    else:\n",
+    "        print(f\"{(i,j)}칸의 값은 1입니다.\")\n",
+    "    \n",
+    "    for k in range(4):        \n",
+    "        n_i = i + dy[k]\n",
+    "        n_j = j + dx[k]\n",
+    "        \n",
+    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:            \n",
+    "            dfs(graph, n_i, n_j, visited)    "
    ]
   },
   {
@@ -226,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -234,16 +428,11 @@
      "output_type": "stream",
      "text": [
       "(0, 0) (1, 0) (1, 1) (1, 2) (0, 1) \n",
-      "(0, 1) \n",
       "(0, 2)칸의 값은 1입니다.\n",
       "\n",
       "(0, 3)칸의 값은 1입니다.\n",
       "(0, 4) \n",
-      "(0, 4) \n",
       "\n",
-      "(1, 0) \n",
-      "(1, 1) \n",
-      "(1, 2) \n",
       "(1, 3)칸의 값은 1입니다.\n",
       "\n",
       "(1, 4)칸의 값은 1입니다.\n",
@@ -260,11 +449,6 @@
       "(2, 4)칸의 값은 1입니다.\n",
       "\n",
       "\n",
-      "(3, 0) \n",
-      "(3, 1) \n",
-      "(3, 2) \n",
-      "(3, 3) \n",
-      "(3, 4) \n",
       "\n"
      ]
     }
@@ -272,7 +456,10 @@
    "source": [
     "for i in range(len(graph)):\n",
     "    for j in range(len(graph[i])):\n",
-    "        dfs(graph, i, j, visited)\n",
+    "        if not visited[i][j]:\n",
+    "            dfs(graph, i, j, visited)\n",
+    "        else:\n",
+    "            continue\n",
     "        print()\n",
     "    print()"
    ]
