More on dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,8 +141,7 @@
     "    \n",
     "    if graph[i][j] == 0:\n",
     "        visited[i][j] = True\n",
-    "        #print((i, j), end=' ')  \n",
-    "    \n",
+    "        #print((i, j), end=' ')      \n",
     "  \n",
     "    for k in range(4):        \n",
     "        i += dy[k]\n",
@@ -160,13 +159,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global connected_component, n, m   \n",
+    "  \n",
+    "    for k in range(4):        \n",
+    "        n_i = i + dy[k]\n",
+    "        n_j = j + dx[k]\n",
+    "        \n",
+    "        if is_valid_coord(n_i, n_j, n, m) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
+    "            #print((n_i, n_j), end=' ')\n",
+    "            visited[n_i][n_j] = True                    \n",
+    "            dfs(graph, n_i, n_j, visited)\n",
+    "            return (n_i, n_j)            \n",
+    "        else:\n",
+    "           continue  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "\n",
       "\n",
       "\n",
@@ -194,6 +216,33 @@
     "        print()    \n",
     "    print()     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 0)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs(graph, 0, 0, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -231,17 +280,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def recursive_function(i):\n",
+    "    if i == 10:\n",
+    "        return\n",
+    "    print(f\"{i}번째 재귀함수에서 {i+1}번째 재귀함수를 호출합니다.\")\n",
+    "    recursive_function(i+1)\n",
+    "    print(f\"{i}번째 재귀함수를 종료합니다.\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0번째 재귀함수에서 1번째 재귀함수를 호출합니다.\n",
+      "1번째 재귀함수에서 2번째 재귀함수를 호출합니다.\n",
+      "2번째 재귀함수에서 3번째 재귀함수를 호출합니다.\n",
+      "3번째 재귀함수에서 4번째 재귀함수를 호출합니다.\n",
+      "4번째 재귀함수에서 5번째 재귀함수를 호출합니다.\n",
+      "5번째 재귀함수에서 6번째 재귀함수를 호출합니다.\n",
+      "6번째 재귀함수에서 7번째 재귀함수를 호출합니다.\n",
+      "7번째 재귀함수에서 8번째 재귀함수를 호출합니다.\n",
+      "8번째 재귀함수에서 9번째 재귀함수를 호출합니다.\n",
+      "9번째 재귀함수에서 10번째 재귀함수를 호출합니다.\n",
+      "9번째 재귀함수를 종료합니다.\n",
+      "8번째 재귀함수를 종료합니다.\n",
+      "7번째 재귀함수를 종료합니다.\n",
+      "6번째 재귀함수를 종료합니다.\n",
+      "5번째 재귀함수를 종료합니다.\n",
+      "4번째 재귀함수를 종료합니다.\n",
+      "3번째 재귀함수를 종료합니다.\n",
+      "2번째 재귀함수를 종료합니다.\n",
+      "1번째 재귀함수를 종료합니다.\n",
+      "0번째 재귀함수를 종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "recursive_function(0)"
+   ]
   },
   {
    "cell_type": "code",
