--- a/dbn_bfs_01.ipynb
+++ b/dbn_bfs_01.ipynb
@@ -36,21 +36,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (83699894.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [3]\u001b[1;36m\u001b[0m\n\u001b[1;33m    def bfs(x, y):\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def bfs(x, y):\n",
-    "    "
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "    \n",
+    "    while queue:\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if nx < 0 or nx >= n or ny < 0 or ny >= m:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 1:\n",
+    "                graph[nx][ny] = graph[x][y] + 1\n",
+    "                queue.append((nx, ny))\n",
+    "                \n",
+    "    return graph[n-1][m-1]    # go all the way down to the right!!!"
    ]
   },
   {
