dbn_bfs_01.ipynb

--- a/dbn_bfs_01.ipynb
+++ b/dbn_bfs_01.ipynb
@@ -27,6 +27,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 10\n",
+      "[1, 1, 0, 1, 0, 1, 1, 1, 0, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 0, 0, 1, 0]\n",
+      "[1, 1, 0, 1, 0, 1, 1, 0, 0, 1]\n",
+      "[0, 1, 1, 1, 1, 1, 0, 0, 1, 0]\n",
+      "[0, 1, 1, 1, 1, 0, 0, 0, 1, 0]\n",
+      "[1, 0, 0, 1, 0, 0, 1, 0, 1, 0]\n",
+      "[1, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"data/dbn_bfs_01.txt\", \"r\").readline\n",
+    "\n",
+    "n, m = map(int, input().rstrip().split())\n",
+    "print(n, m)\n",
+    "\n",
+    "graph = []\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int, input().rstrip())))\n",
+    "    \n",
+    "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
