dbn_bfs_01.ipynb

--- a/dbn_bfs_01.ipynb
+++ b/dbn_bfs_01.ipynb
@@ -79,6 +79,7 @@
     "    queue.append((x, y))\n",
     "    \n",
     "    while queue:\n",
+    "        x, y = queue.popleft()\n",
     "        for i in range(4):\n",
     "            nx = x + dx[i]\n",
     "            ny = y + dy[i]\n",
