dbn_bfs_01.ipynb

--- a/dbn_bfs_01.ipynb
+++ b/dbn_bfs_01.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +37,10 @@
       "7 10\n",
       "[1, 1, 0, 1, 0, 1, 1, 1, 0, 1]\n",
       "[1, 1, 1, 1, 1, 1, 0, 0, 1, 0]\n",
-      "[1, 1, 0, 1, 0, 1, 1, 0, 0, 1]\n",
-      "[0, 1, 1, 1, 1, 1, 0, 0, 1, 0]\n",
-      "[0, 1, 1, 1, 1, 0, 0, 0, 1, 0]\n",
-      "[1, 0, 0, 1, 0, 0, 1, 0, 1, 0]\n",
+      "[1, 1, 0, 1, 1, 1, 1, 0, 0, 1]\n",
+      "[0, 0, 1, 0, 0, 0, 1, 0, 1, 0]\n",
+      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 0, 0, 1, 1, 0, 0, 0, 1, 0]\n",
       "[1, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,10 +97,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bfs(0, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 0, 6, 0, 8, 9, 10, 0, 1]\n",
+      "[2, 3, 4, 5, 6, 7, 0, 0, 1, 0]\n",
+      "[3, 4, 0, 6, 7, 8, 9, 0, 0, 1]\n",
+      "[0, 0, 12, 0, 8, 0, 10, 0, 18, 0]\n",
+      "[0, 12, 11, 10, 9, 10, 11, 0, 17, 0]\n",
+      "[1, 0, 0, 11, 10, 0, 0, 0, 16, 0]\n",
+      "[1, 0, 0, 12, 11, 12, 13, 14, 15, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in graph:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
