dbn_selection_sort.ipynb

--- a/dbn_selection_sort.ipynb
+++ b/dbn_selection_sort.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 선택정렬(Selection Sort)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -21,7 +28,7 @@
     "    for j in range(i+1, len(array)):\n",
     "        if array[min_idx] > array[j]:\n",
     "            min_idx = j\n",
-    "    array[min_idx], array[i] = array[i], array[min_idx]\n",
+    "    array[min_idx], array[i] = array[i], array[min_idx]   # swap\n",
     "\n",
     "print(array)"
    ]
