--- a/dbn_sort.ipynb
+++ b/dbn_sort.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = list(map(int, input().split()))   # 7 5 88 9 0 -24 3 1 6 2 4 8"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,20 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "[-24, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 88]\n"
      ]
     }
    ],
    "source": [
-    "array = list(map(int, input().split()))   # 7 5 9 0 3 1 6 2 4 8\n",
-    "\n",
     "for i in range(len(array)):\n",
     "    min_idx = i\n",
     "    for j in range(i+1, len(array)):\n",
@@ -30,6 +37,36 @@
     "            min_idx = j\n",
     "    array[min_idx], array[i] = array[i], array[min_idx]   # swap\n",
     "\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 삽입정렬(Insertion Sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-24, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 88]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, len(array)):\n",
+    "    for j in range(i, 0, -1):\n",
+    "        if array[j] < array[j-1]:\n",
+    "            array[j], array[j-1] = array[j-1], array[j]\n",
+    "        else:\n",
+    "            break\n",
     "print(array)"
    ]
   }
