--- a/dbn_sort.ipynb
+++ b/dbn_sort.ipynb
@@ -76,6 +76,20 @@
    "source": [
     "##### 퀵정렬(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def qucik_sort(array, start, end):\n",
+    "    if start >= end:\n",
+    "        return\n",
+    "    pivot = start\n",
+    "    left = pivot + 1\n",
+    "    right = end"
+   ]
   }
  ],
  "metadata": {
