--- a/dbn_sort.ipynb
+++ b/dbn_sort.ipynb
@@ -79,16 +79,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "def qucik_sort(array, start, end):\n",
+    "def quick_sort(array, start, end):\n",
     "    if start >= end:\n",
     "        return\n",
     "    pivot = start\n",
-    "    left = pivot + 1\n",
-    "    right = end"
+    "    left = start + 1\n",
+    "    right = end\n",
+    "    \n",
+    "    while (left <= right):\n",
+    "        while (left <= end and array[left] <= array[pivot]):\n",
+    "            left += 1\n",
+    "        while (right >= start and array[right] >= array[pivot]):\n",
+    "            right -= 1\n",
+    "        if (left > right):\n",
+    "            array[right], array[pivot] = array[pivot], array[right]\n",
+    "        else:\n",
+    "            array[right], array[left] = array[left], array[right]\n",
+    "    quick_sort(array, start, right-1)\n",
+    "    quick_sort(array, right+1, end)\n",
+    "    \n",
+    "quick_sort(array, 0, len(array)-1)\n",
+    "print(array)"
    ]
   }
  ],
