changing selection_sort to sort.ipynb

--- a/dbn_sort.ipynb
+++ b/dbn_sort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
     "    while (left <= right):\n",
     "        while (left <= end and array[left] <= array[pivot]):\n",
     "            left += 1\n",
-    "        while (right >= start and array[right] >= array[pivot]):\n",
+    "        while (right > start and array[right] >= array[pivot]):\n",
     "            right -= 1\n",
     "        if (left > right):\n",
     "            array[right], array[pivot] = array[pivot], array[right]\n",
