changing selection_sort to sort.ipynb

--- a/dbn_sort.ipynb
+++ b/dbn_sort.ipynb
@@ -113,6 +113,33 @@
     "quick_sort(array, 0, len(array)-1)\n",
     "print(array)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 퀵정렬 : Python의 list slicing 과 list comprehension을 이용한 방식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def python_quick_sort(array):\n",
+    "    if len(array) <= 1:\n",
+    "        return array\n",
+    "    pivot = array[0]\n",
+    "    tail = array[1:]\n",
+    "    \n",
+    "    left_side = [x for x in tail if x <= pivot]\n",
+    "    right_side = [x for x in tail if x > pivot]\n",
+    "    \n",
+    "    return python_quick_sort(left_side) + [pivot] + python_quick_sort(right_side)\n",
+    "\n",
+    "python_quick_sort(array)  "
+   ]
   }
  ],
  "metadata": {
