--- a/dbn_sort.ipynb
+++ b/dbn_sort.ipynb
@@ -161,10 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 5,    K : 3\n",
+      "A : [1, 2, 5, 4, 3]\n",
+      "B : [5, 5, 6, 6, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, K = map(int, input().split())     # 5 3\n",
+    "\n",
+    "A = list(map(int, input().split()))  # 1 2 5 4 3\n",
+    "B = list(map(int, input().split()))  # 5 5 6 6 5\n",
+    "\n",
+    "print(f\"N : {N},    K : {K}\")\n",
+    "print(f\"A : {A}\")\n",
+    "print(f\"B : {B}\")\n"
+   ]
   }
  ],
  "metadata": {
