--- a/dbn_sort.ipynb
+++ b/dbn_sort.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +183,56 @@
     "print(f\"N : {N},    K : {K}\")\n",
     "print(f\"A : {A}\")\n",
     "print(f\"B : {B}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A : [1, 2, 3, 4, 5]\n",
+      "B : [6, 6, 5, 5, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A.sort()\n",
+    "B.sort(reverse=True)\n",
+    "print(f\"A : {A}\")\n",
+    "print(f\"B : {B}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A : [6, 6, 5, 4, 5]\n",
+      "B  : {B}\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(K):\n",
+    "    if A[i] < B[i]:\n",
+    "        A[i], B[i] = B[i], A[i]\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "ans = sum(A)\n",
+    "\n",
+    "print(f\"A : {A}\")\n",
+    "print(f\"B : {B}\")\n",
+    "print(ans)"
    ]
   }
  ],
