BFS를 이용한 나동빈의 최단거리 구하기

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -875,6 +875,32 @@
    "source": [
     "dfs(0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### BFS를 이용한 나동빈 최단거리구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(x, y):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
