BFS를 이용한 나동빈의 최단거리 구하기

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -885,11 +885,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1101011101]\n",
+      "[1111110010]\n",
+      "[1101111001]\n",
+      "[10001010]\n",
+      "[111111010]\n",
+      "[1001100010]\n",
+      "[1001111111]\n"
+     ]
+    }
+   ],
    "source": [
-    "from collections import deque"
+    "from collections import deque\n",
+    "\n",
+    "input = open(\"data/dbn_bfs_01.txt\").readline\n",
+    "n, m = map(int, input().split())\n",
+    "graph = []\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    graph.append(list(map(int, input().split())))\n",
+    "    \n",
+    "for row in graph:\n",
+    "    print(row)"
    ]
   },
   {
@@ -899,7 +923,12 @@
    "outputs": [],
    "source": [
     "def bfs(x, y):\n",
-    "    "
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "    \n",
+    "    while queue:\n",
+    "        x, y = queue.popleft()\n",
+    "        "
    ]
   }
  ],
